--- a/about.html
+++ b/about.html
@@ -17,6 +17,10 @@
     <nav>
     <div id="logo" class="protest-revolution-regular">
         <img width="60px" src="photos/brain.png">STRENGTH OF MIND</div>
+        <input type="checkbox" id="menu-toggle">
+        <label for="menu-toggle" id="hamburger">
+            <i class="fa fa-bars"></i>
+        </label>
     <div id="nav-items" class="protest-revolution-regular">
     <a href="index.html"><i class="fa fa-home"></i></a>
     <a href="about.html"><i class="fa-regular fa-file-lines"></i></a>
