--- a/about.html
+++ b/about.html
@@ -72,8 +72,13 @@
     
 </div>
 <div class="right-side">
+    <div class="flip-container">
+        <div class="flip-inner">
+            <div class="flip-front">
 <img class="werewolf" src="photos/werewolf.png">
-
+</div>
+<div class="flip-back">
+</div>
 </div>
 </div>
 </div>
