--- a/index.html
+++ b/index.html
@@ -40,8 +40,14 @@
     <a href="about.html"><button>Check this out</button></a>
 </div>
 <div class="right-side">
+    <div class="flip-container">
+        <div class="flip-inner">
+            <div class="flip-front">
 <img class="lion" src="photos/lion.png">
 
+</div>
+<div class="flip-back">
+</div>
 </div>
 </div>
 </div>
