--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@
         <a href="about.html"><i class="fa-regular fa-file-lines"></i></a>
         <a href="contact.html"><i class="fa-solid fa-envelope"></i></a>
         <a href="images.html"><i class="fa-solid fa-image"></i></a>
+        <a href="opinions.html"><i class="fa-solid fa-circle-user"></i></a>
     </div>
 </nav>
 
